h1. Release Notes for Sirius

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.1.0). Changes in Sirius 7.1.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> In a tree editor, if the @Shift@ key is pressed during using the @left arrow@ key, a collapse all is done instead of a simple collapse. This is the same for expand with @Shift@ + @right arrow@ key. You can refer to "navigation documentation":user/trees/Trees.html#navigation for more details.
* <span class="label label-success">Added</span> A new mode has been added to "paste the layout":user/diagrams/Diagrams.html#paste_layout of elements between two diagrams. This mode is useful in case of diagrams having the same elements represented several times in a diagram or to copy the layout from a diagram having a hierarchy different than the target diagram. This mode is called "Optimized locations by group" (the existing mode is called "Similar locations in absolute coordinates"). With this new mode, the paste action groups elements having the same container in the target diagram. Then it applies the copied layout of these elements relative to each other, while maintaining the same location for the group in the target diagram. Examples are available in the "corresponding documentation":user/diagrams/Diagrams.html#paste_layout.
* <span class="label label-success">Added</span> The Distribute and Align actions are now also available on the label of edges. Previously, this kind of actions was available only on nodes. You can refer to "Distribute elements documentation":user/diagrams/Diagrams.html#distribute or "Align elements documentation":user/diagrams/Diagrams.html#align for more details.